[project]
name = "fabrik7"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-snap7>=2.0.2",
]

[dependency-groups]
dev = [
    "mypy>=1.16.0",
    "ruff>=0.11.13",
    "taskipy>=1.14.1",
]

[tool.taskipy.tasks]
lint = 'ruff check .'
format = 'ruff check . --fix && ruff format .'

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W", "PL", "PT"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true